--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "Gruntfile.js",
   "dependencies": {
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.5",
+    "jquery": null
   },
   "devDependencies": {
     "grunt-combine-media-queries": "^1.0.19",
