--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-browser-sync": "^1.3.5",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt": "^0.4.5",
+    "grunt-mkdir": "^0.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
