--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "grunt-browser-sync": "^1.3.5",
     "grunt-contrib-watch": "^0.6.1",
     "grunt": "^0.4.5",
-    "grunt-mkdir": "^0.1.2"
+    "grunt-mkdir": "^0.1.2",
+    "grunt-exec": "^0.4.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
