--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "Gruntfile.js",
   "dependencies": {
     "grunt": "~0.4.5",
-    "jquery": "^2.1.1"
+    "jquery": "^2.1.1",
+    "bower": "^1.3.9"
   },
   "devDependencies": {
     "grunt-combine-media-queries": "^1.0.19",
