--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt": "^0.4.5",
     "grunt-mkdir": "^0.1.2",
-    "grunt-execute": "^0.2.2"
+    "grunt-shell": "^0.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
