--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "grunt-browser-sync": "^1.3.5",
     "grunt-contrib-watch": "^0.6.1",
     "grunt": "^0.4.5",
-    "grunt-mkdir": "^0.1.2",
-    "grunt-bower-task": "^0.4.0"
+    "grunt-mkdir": "^0.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
